--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -32,342 +32,11 @@ Abbildung \arabic{abbildungen}: #3
 \begin{document}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Generelle Eigenschaften el. Maschinen}
-\subsection{Generelle Formeln von el. Maschinen}
-\renewcommand{\arraystretch}{2}
-	\begin{tabular}[c]{ | p{5cm} | p{8cm} | p{4cm} | }
-		\hline
-		\textbf{Name} & \textbf{Formel} & \textbf{Einheit}\\    
-		\hline
-		Permeabilität
-		& $\mu = \mu_0 \mu_r = \mu_r \cdot 4 \cdot \pi \cdot 10^{-7}
-		\frac{Vs}{Am} = \mu_r \cdot 1.2566 \frac{\mu H}{m}=\frac{B}{H}$ &$\frac{\mu
-		H}{m}=\frac{Vs}{An}$\\
-		\hline 
-		Magn. Flussdichte %B = \frac{\mu}{4 \pi} \cdot \frac{Q v}{r^2} =
-		& $B = \frac{F}{Q \cdot v} = H \cdot \mu \text{\qquad wobei } \vec{v} \perp
-		\vec{B}$ & $\frac{Vs}{m^2} = T$ (Tesla) \\
-		\hline
-		Lorentzkraft
-		& $\vec{F} = Q (\vec{v} \times \vec{B})=I(\vec{l}\times \vec{B}) \hspace{1cm} |\vec{F}| = Q \cdot v \cdot B
-		\cdot \sin\alpha$
-		&$N$\\
-		Ampèresches Gesetz
-		&$F=\frac{Q_2 \cdot v_2 \cdot Q_1 \cdot v_1 \cdot \mu}{r^2 \cdot 4\pi}$
-		&\\
-		\hline
-		Drehmoment von Schleifen
-		& $M_{max} = 2 \cdot F \cdot \frac{d}{2}= F \cdot d = N \cdot B \cdot
-		I \cdot d \cdot l = \frac{P_{Mech}}{2 \pi n_0} $
-		& Nm; $n_0= Drehzahl$\\
-		\hline
-		\textbf{3-Finger-Regel:}
-		(rechte Hand)
-		& $F$ = Daumen, $v$ = Zeigefinger, $B$ = Mittelfinger
-		& Bei $Q < 0$ wechselt Richtung von B!\\
-		\hline
-		Magnetische Feldstärke
-		& $\vec{H} = \frac{ \vec{B}}{\mu }$
-		& $\frac{A}{m}$\\
-		Magnetische Spannung
-		& $V_{mAB} = \int\limits \vec{H}(s) \cdot \vec{ds}$ ($V_m$ ist abhängig vom
-		Weg) & $A$ \\
-		\hline
-		Durchflutung
-		& $\Theta = \oint\vec{H} \cdot \vec{ds} = \sum\limits_{x=1}^n H_x \cdot l_x = \int\limits \vec{J}
-		\cdot \vec{dA} \vee \underbrace{\sum I_k}_{= N I} = V_m$
-		& $A$\\
-		\hline
-		Magnetischer Fluss
-		& $\Phi = \int \vec{B} \vec{dA}$
-		& $Vs = Wb$ (Weber)\\
-		& $\Phi = B \cdot A \cdot \cos(\gamma)=b \cdot A \cdot (1+Streufluss)$
-		& B homogen\\
-		\hline
-		\textbf{Maxwell-Gesetz}
-		& $\oint \vec{B} \vec{dA} = 0$ (vgl. Kirchhoff 1 ($\sum I = 0$))
-		&\\
-		\hline
-		Füllfaktor
-		&$F=\frac{A_{Effektiv Fe}}{A_{Tot}}$
-		& $[-]$\\
-		\hline
-		Magn. Widerstand
-		& $R_m = \frac{V_m}{\Phi} = \frac{\Theta}{\Phi} = \frac{l}{\mu A} $
-		& $\frac{A}{Wb}$ \\
-		\hline
-		Magn. Leitwert
-		& $\Lambda = \frac{1}{R_m} = \frac{\Phi}{V_m}=\frac{\Phi}{\Theta}$
-		& $\frac{Vs}{A} = H$ (Henry) (Im Formelbuch als $A_L$)\\
-		\hline
-		Verketteter Fluss
-		& $\Psi = \sum \Phi $ (meist $\Psi = N \Phi$)
-		& $[\Psi] = [\Phi] = Vs = Wb$\\
-		\hline
-		Induktivität
-		& $L = \frac{\Psi}{I}  \qquad \text{Bei idealer Koppl.: } L = \Lambda N^2 = \frac{N^2}{R_m} $
-		& $[L] = \frac{Vs}{A} = H$\\
-		\hline
-		Gegeninduktivität
-		& $M = M_{21} = M_{12}$ Bei idealer Koppl. $M = \sqrt{L_1 L_2}$
-		& vorder Index = Wirkung,\\
-		&$M_{21} = \frac{\Psi_{21}}{I_1}$  (meist $M_{21} = \frac{N_2 \Phi_{21}}{I_1}$)
-		& hinterer = Ursache\\
-		\hline
-		Kopplungsfaktor
-		& $k = \frac{M}{\sqrt{L_1 L_2}}$ Bei idealer Kopplung: $k = 1$
-		& $[-]$ \\
-		\hline
-		Streukoeffizient
-		& $\sigma = 1 - k^2 = 1 -\frac{M^2}{L_1 L_2}$ Bei idealer Kopplung: $\sigma = 0$
-		& $[-]$\\
-		\hline
-		Kreis-r in M-Feld abgelenkte Q
-		& $r = \frac{m_Q \cdot v}{Q \cdot B}$
-		&m, $ m_e = 9,11 \cdot 10^{-31} kg$ \\
-		\hline
-		Spannung
-		& $U = L \cdot \frac{di}{dt}=N \cdot B \cdot l \cdot v$
-		& V\\
-		\hline
-		Wirkungsgrad
-		& $\eta = \frac{P_2}{P_1}=\frac{abgegebene P}{aufgenommene P}= \frac{P_1 -
-		P_Verluste}{P_1}$
-		& -\\
-		\hline
-		Verluste:
-		&Hysterese 	$\sim f \cdot B^2$ \qquad
-		Wirbelstrom $\sim f^2 \cdot B^2$ \qquad
-		Lüfter	$	\sim n^3$ \qquad\qquad
-		Erreger$		= I_E ^2 \cdot R_e $&\\
-		\hline
-	\end{tabular}
-	\renewcommand{\arraystretch}{1}	
-	
-	\subsection{Übersicht über Motorenarten}
-		\abb{images/uebersicht_el.png}{11cm}{Prinzipieller Aufbau El. Maschinen}
-
-\section{Gleichstrommaschinen (GSM)}
-	\subsection{Funktionsprinzip}
-		Ein Gleichstrom ist im Prinzip eigendlich nur eine stromdurchflossene
-		Schleife, welche sich in einem Magnetfeld befindet.\\
-		Durch die Lorenzkraft wirkt auf die Schleife ein Drehmoment, welche sie in
-		eine maximal halbe Drehung versetzt.
-		Danach muss man den Schleifenstrom umpolisieren, um die Drehung weiter zu
-		führen.\\
-		\abb{images/GSM_Funktion.png}{14cm}{Funktion eines GSM mit Stromwender}
-		\abb{images/GSM_Ersatz.png}{14cm}{Erstzschema der 4 Schaltungsarten}
-		A1,A2: Ankerwicklung, B1,B2: Wendepolwicklung, C1,C2: Kompensationswicklung, \\
-		D1,D2: Reihenschlusswicklung, E1,E2: Nebenschlusswicklung, F1,F2: Fremderregte Wicklung
-		
-		Um ein gleichmässiges Drehmoment erreichen zu können, kann folgende Wicklung
-		angewendet werden\\
-		\begin{minipage}{10cm}
-			\abb{images/GSM_Wicklungen}{9.5cm}{Entstehung eienr Schleifenwicklung}
-		\end{minipage}
-		\begin{minipage}{7cm}
-			\abb{images/GSM_Drehmomentdarstellung}{6.5cm}{Alle Drehmomente
-			zusammen ergeben ein gleichmässiges Drehmoment}
-		\end{minipage}
-		
-	\subsection{Nebenschluss Maschinen}
-
-		\begin{tabular}[c]{ | p{6cm} | p{9cm} |}
-			\hline
-			Drehzahl
-			& $ n= \frac{U}{k_1 \cdot \Phi} - \frac{R_A \cdot M}{k_1 \cdot k_2 \cdot
-			\Phi^2} \sim \frac{U}{I_E} - \frac{M}{I_E^2}$\\ 
-			& $\Longrightarrow $ bei $I_E$ = 0 und $M$ = 0 $n \rightarrow \infty$\\
-			\hline
-			Drehmoment
-			& $M=\frac{k_2 \cdot \Phi \cdot U_{Anker}}{R_{Anker}} - \frac{k_1 \cdot k_2
-			\cdot\phi^2 \cdot n}{R_A} =\frac{P_{mech}}{2\pi
-			n_N}=\frac{U_{iN}I_N}{2\pi n_N}\sim I_E \cdot U_A - I_E ^2 \cdot n$\\
-			\hline
-			Leistung
-			& $P_{Anker}= U_i \cdot I \pm I^2 \cdot R_A $(+ bei Motor; - bei Generator)\\
-			\hline
-			Anlaufmoment
-			& $M_A = \frac{k_1 \cdot \Phi \cdot U}{R_1}$\\
-			\hline
-			Leerlaufmoment
-			& $n_0 = \frac{U}{k_1 \cdot \Phi}$\\
-			\hline
-		
-		\end{tabular}
-
-	\subsection{Reihenschluss Maschine}
-
-		\begin{tabular}[c]{ | p{6cm} | p{9cm} |}
-		\hline
-		Drehmoment
-		& $ M=  \frac{U_{Induziert} \cdot I_A}{2 \cdot \pi n_N} = \frac{k_1 \cdot k_E
-		\cdot I_A ^2}{2\cdot \pi n_N}= \frac{k_1 \cdot k_E}{2 \cdot
-		\pi n_N}\cdot(\frac{U}{R_A + R_E + k_1 \cdot k_E \cdot n})^2$\\
-		\hline
-		Anlaufstrom
-		& $I_A=\frac{U_N}{\sum R_a}=\frac{U_N I_N^2}{U_N I-P_N}$\\
-		\hline
-		\end{tabular}
+\input{sections/10-Grundlagen}
+\input{sections/20-GSM}
+\input{sections/30-DSM}
 
 
-\section{Grundlagen Drehfeldmaschinen}
-	\subsection{Dreiphasenwechselstrom (Drehstrom)}
-		%\subsection{Entstehung des Drehstrom-Systems}
-			\begin{tabular}{p{8.5cm}p{9cm}}
-	        	\begin{minipage}{8cm}
-	            	\includegraphics[width=7.5cm]{images/Drehstrom.png}
-	            \end{minipage} &
-				\begin{minipage}{10cm}
-	            	Zeiger drehen mit $\omega t$ im Gegenuhrzeigersinn ($\omega > 0$). \\
-	            	$\underline{U}_2$ ist gegenüber $\underline{U}_1$
-					$120^{\circ}$ nacheilend, $\underline{U}_3$ gegenüber $\underline{U}_1$ $240^{\circ}$.  \\ \\
-					Somit gilt (bei symmetrischer Belastung): \\
-					$\underline{U}_2 = \underline{U}_1 \cdot e^{j (-120^{\circ})}; \underline{U}_3
-					= \underline{U}_1 \cdot e^{j (-240^{\circ})} = \underline{U}_1 \cdot e^{j
-					(120^{\circ})}$
-	            \end{minipage}
-	        \end{tabular}
-	
-	% 		\subsubsection{Verketten der Spannungen oder Ströme}
-	% 			\begin{tabular}{p{5cm}p{6cm}p{7cm}}
-	%             	\textbf{Maschensatz} &
-	%             		\fbox{$\underline{U}_1 + \underline{U}_2 + \underline{U}_3 = 0$} \\
-	%             	\textbf{Knotenpunktsatz} &
-	%             		\fbox{$\underline{I}_1 + \underline{I}_2 + \underline{I}_3 = 0$} \\
-	%             \end{tabular}
-	
-			\subsubsection{Stern- (Y) / Dreieckschaltung ($\Delta$)}
-	            	\renewcommand{\arraystretch}{1.5}
-				\begin{tabular}{| p{4.5cm} | l | l |}
-					\hline
-		 				& Sternschaltung (Y)		& Dreieckschaltung ($\Delta$)\\
-		 			\hline
-		 			\vspace{0.2cm}
-		 				%\textbf{Zeigerdiagramm} & & \\
-		 				&
-		 					\includegraphics[width=5cm]{images/Sternspannung.png} &
-		 					\includegraphics[width=5cm]{images/Dreieckstrom.png} \\
-	
-			 			Verkettete Spannung &
-			 				$U = U_{Str} \cdot \sqrt{3}$ \hspace{0.2cm} $\underline{U} = \underline{U}_{Str} \cdot \sqrt{3} \cdot e^{j 30^\circ}$ &
-			 				$U = U_{Str}$ \hspace{0.2cm} $\underline{U} = \underline{U}_{Str}$ \\
-			 			Aussenleiterströme &
-			 				$I = I_{Str}$ \hspace{0.2cm} $\underline{I} = \underline{I}_{Str}$ &
-			 				$I = I_{Str} \cdot \sqrt{3} $ \hspace{0.2cm} $\underline{I} =
-			 				\underline{I}_{Str} \cdot \sqrt{3} \cdot e^{-j 30^\circ} $ \\ Gesamt-Scheinleistung &
-			 				$S = 3 \cdot S_{Str} =\sqrt{3} \cdot U \cdot I $ \hspace{0.2cm} in $[VA]$
-			 				& $S = 3 \cdot S_{Str} = \sqrt{3} \cdot U \cdot I$ \hspace{0.2cm} in $[VA]$ \\ Scheinleistung pro Strang &
-			 				\multicolumn{2}{l|}{\hspace{3cm} $S_{Str} = U_{Str} \cdot I_{Str}$ \hspace{0.2cm} in $[VA]$} \\
-			 			Wirkleistung &
-			 				\multicolumn{2}{l|}{\hspace{3cm} $P = S \cdot \cos\varphi = \sqrt{3} \cdot U \cdot I \cdot \cos\varphi$ \hspace{0.2cm} in $[W]$} \\
-			 			Blindleistung &
-			 				\multicolumn{2}{l|}{\hspace{3cm} $Q = S \cdot \sin\varphi = \sqrt{3} \cdot U \cdot I \cdot \sin\varphi$ \hspace{0.2cm} in $[var]$} \\
-	% 		 			Wirkarbeit &
-	% 		 				\multicolumn{2}{l|}{\hspace{3cm} $W = P \cdot t = \sqrt{3} \cdot U \cdot I \cdot cos\varphi \cdot t$ \hspace{0.2cm} in $[Ws, kWh]$} \\
-	% 		 				&\multicolumn{2}{c|}{}\\
-	% 		 			Blindarbeit &
-	% 		 				\multicolumn{2}{l|}{\hspace{3cm} $W_b = Q \cdot t = \sqrt{3} \cdot U \cdot I \cdot sin\varphi \cdot t$ \hspace{0.2cm} in $[varh, kvarh]$} \\
-		 			\hline
-				\end{tabular}
-	        \renewcommand{\arraystretch}{1}
-	
-% 	        \subsubsection{Ausfall des Neutralleiters: Bestimmung des Y-Punktes mittels Leitwert-Operatoren}
-% 	            \begin{tabular}{p{5cm}p{13cm}}
-% 	            	\begin{minipage}{8cm}
-% 	                	\includegraphics[width=5cm]{images/ZeigerdarstellungVerschobenerSternpunkt.png}
-% 	                \end{minipage} &
-% 					\begin{minipage}{13cm}
-% 	                	$\underline{U}_{12} = \underline{U}_{1N'} - \underline{U}_{2N'}$ \hspace{0.3cm}
-% 	                	$\underline{U}_{1N'} = \underline{U}_{1N} + \underline{U}_{NN'}$ \hspace{0.3cm}
-% 	                	$\underline{I}_1 = \underline{Y}_1 \cdot \underline{U}_{1N'} = \underline{Y}_1 \cdot (\underline{U}_{1N} + \underline{U}_{NN'})$ \\
-% 	                	$\underline{U}_{23} = \underline{U}_{2N'} - \underline{U}_{3N'}$ \hspace{0.3cm}
-% 	                	$\underline{U}_{2N'} = \underline{U}_{2N} + \underline{U}_{NN'}$ \hspace{0.3cm}
-% 	                	$\underline{I}_2 = \underline{Y}_2 \cdot \underline{U}_{2N'} = \underline{Y}_2
-% 	                	\cdot (\underline{U}_{2N} + \underline{U}_{NN'})$ \\ $\underline{U}_{31} = \underline{U}_{3N'} - \underline{U}_{1N'}$ \hspace{0.3cm}
-% 	                	$\underline{U}_{3N'} = \underline{U}_{3N} + \underline{U}_{NN'}$ \hspace{0.3cm}
-% 	                	$\underline{I}_3 = \underline{Y}_3 \cdot \underline{U}_{3N'} = \underline{Y}_3
-% 	                	\cdot (\underline{U}_{3N} + \underline{U}_{NN'})$ \\ \\
-% 	                	$$\underline{U}_{NN'} = \boldsymbol{-} \frac{(\underline{Y}_1 \cdot
-% 	                	\underline{U}_{1N} + \underline{Y}_2 \cdot \underline{U}_{2N} + \underline{Y}_3 \cdot
-% 	                	\underline{U}_{3N})}{\underline{Y}_1 + \underline{Y}_2 +
-% 	                	\underline{Y}_3}$$
-% 	                \end{minipage}
-% 				\end{tabular}
-% 	
-% 		\subsubsection{Defektleistung von symmetrischen Drehstromverbrauchern}
-% 			\begin{tabular}{| p{7.5cm} | l | l |}
-% 				\hline
-% 	 				& Normalleistung		& Defektleistung\\
-% 	 			\hline
-% 		 			\textbf{Y-Schaltung bei Leiter- oder Strangausfall} ohne Neutralleiter &
-% 		 				$P_{Norm} = 3 \cdot \frac{U^2_{Str}}{R} = \frac{U^2}{R}$ &
-% 		 				$P_{Def} = \frac{1}{2} \frac{U^2}{R}$ \tiny{nur 50\% von $P_{Norm}$} \\
-% 		 			&&\\
-% 		 			\textbf{Y-Schaltung bei Leiter- oder Strangausfall} mit Neutralleiter &
-% 		 				$P_{Norm} = 3 \cdot \frac{U^2_{Str}}{R} = \frac{U^2}{R}$ &
-% 		 				$P_{Def} = 2 \cdot \frac{U^2_{Str}}{R} = \frac{2}{3} \frac{U^2}{R}$ \tiny{nur 66\% von
-% 		 				$P_{Norm}$} \\ &&\\
-% 		 			\textbf{$\Delta$-Schaltung bei Leiterausfall} &
-% 		 				$P_{Norm} = 3 \cdot \frac{U^2}{R}$ &
-% 		 				$P_{Def} = \frac{U^2}{R} + \frac{U^2}{2R} = \frac{3U^2}{2R}$ \tiny{nur 50\% von $P_{Norm}$} \\
-% 		 			&&\\
-% 		 			\textbf{$\Delta$-Schaltung bei Strangausfall} &
-% 		 				$P_{Norm} = 3 \cdot \frac{U^2}{R}$ &
-% 		 				$P_{Def} = 2 \cdot \frac{U^2}{R}$ \tiny{nur 66\% von $P_{Norm}$} \\
-% 		 		\hline
-% 			 \end{tabular}
-	
-		\subsubsection{Stern-Dreieck-Umwandlung}% \formelbuch{18}}
-		%\begin{figure}
-		  \begin{minipage}[lt]{7.5 cm}
-		    \includegraphics[width=6cm]{images/stern-dreieck.png}
-		  \end{minipage}
-		  \begin{minipage}[rt]{9.35 cm} %BASTEL!!
-	      \renewcommand{\arraystretch}{2}
-		  \begin{tabular}{ll}
-			Umwandlung $\triangle \rightarrow Y$:
-				&$Z_{c} = \dfrac{Z_{ac} Z_{bc}}{Z_{ab}+Z_{bc}+Z_{ac}}$\\
-			Umwandlung $Y \rightarrow \triangle$:
-				&$Y_{ac}=\dfrac{Y_{a} Y_{c}}{Y_{a}+Y_{b}+Y_{c}}$\\
-			Bei gleichen Widerständen:
-			&$R_Y = \frac{R_\triangle}{3}$ \\
-			Bei gleichen Kapazitäten:
-			&$C_Y = C_\triangle \cdot 3 $ \\
-			Bei gleichen Induktivitäten:
-			&$L_Y = \frac{L_\triangle}{3}$
-			  \end{tabular}
-		      \renewcommand{\arraystretch}{1}
-			  \end{minipage}
-			%\end{figure}
-	
-	\subsection{Feld in einer Drehstrommaschine}
-		\begin{minipage}{7cm}
-   			\abb{images/Drehfeld.png}{6cm}{Entstehung eines Drehfeldes in einem
-   			elMaschine}
-        \end{minipage}
-		\begin{minipage}{11cm}
-	 		Bei einem Drehfeld entsteht zu jedem Zeitpunkt gleichgrosses Magnetisches Feld,
-			woraus dann ein gleichmässiges Drehmoment resultieren kann. Nach dem
-			obrigen Bild dreht sich das Feld in einer Periode um die eigene Achse. Verwendet
-			man mehrere Polpaare wird die Drehzahl reduziert\\
-			$Drehfelddrehzahl  = n_d =\frac{f}{p}$ \\
-        \end{minipage}
-		\subsubsection{Schlupf}
-			Als Schlupf bezeichnet man die Beziehung zwischen Drehfelddrehzahl und
-			Läuferdrehzahl. Sie wird mit folgender Formel beschrieben:\\
-			\begin{minipage}{8cm}
-				$Schlupf = s = \frac{n_d - n}{n_d}$\\
-				Das heisst bei einer Läuferdrehzahl $<$ $n_d$ in Drehfeldrichtung ist der Schlupf
-				0 $<$ s $<$ 1
-			\end{minipage}
-			\begin{minipage}{9cm}
-				\abb{images/Schlupfgerade.png}{4cm}{Schlupfgerade}
-			\end{minipage}
-	
-\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Synchronmotor
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
