--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -1,28 +1,28 @@
 \section{Drehstrom- Synchronmaschinen(DSM)}
     \subsection{Aufbau der DSM}
         \includegraphics[width=12cm]{./images/Aufbau_DSM.png}\\
-        \begin{tabular}{ p{1cm} p{4cm} p{10cm}}
-            - &
-            Innenpolmaschine: &
-            Der Läufer ist ein Dauermagnet, oder wird mit Gleichstrom und über Schleifer zu einem solchem gemacht. Dieser läuft mit dem aussen anliegendem Drehfeld mit \\
-            - &
-            Aussenpolmaschine: &
-            Der Läufer erzeugt ein Drehfeld, welches sich immer am konstanten Statorfeld ausrichtet. Worauf sich des Läufer dreht \\
-            - &
-            Turbomaschine: &
-            Die Schleiferlose Variante. Mit Hilfe eines Hilfsgenerator auf der gleichen Welle wird ein Drehstrom erzeugt, welcher auf dem Läufer selbst gleichgerichtet wird. Damit wird dan ein konstantes Magnetfeld (Dauermagnet) erzeugt (wie die Innenpolmaschine) \\
-        \end{tabular}
+        \begin{description}
+            \item[Innenpolmaschine:] Der Läufer ist ein Dauermagnet, oder wird mit Gleichstrom und über Schleifer
+            zu einem solchem gemacht. Dieser läuft mit dem aussen anliegendem Drehfeld mit.
+            \item[Aussenpolmaschine:] Der Läufer erzeugt ein Drehfeld, welches sich immer am konstanten Statorfeld
+            ausrichtet. Worauf sich des Läufer dreht.
+            \item[Turbomaschine:] Die Schleiferlose Variante. Mit Hilfe eines Hilfsgenerator auf der gleichen Welle
+            wird ein Drehstrom erzeugt, welcher auf dem Läufer selbst gleichgerichtet wird. Damit wird dan ein
+            konstantes Magnetfeld (Dauermagnet) erzeugt (wie die Innenpolmaschine).
+        \end{description}
 
     \subsection{Ersatzschaltbild}
         \begin{minipage}{11cm}
             \abb{images/Ersatz_DSM.png}{8cm}{Ersatzschaltung DSM}    
-            Es gibt 2 Unterteilungen:\\
-            \begin{tabular}{p{1cm} p{9cm}}
-                - &
-                Wirkleistung: Gibt die DSM leistung ab oder nimmt sie auf. Zu erkennen ist das am Phasenwinkel zwischen $U_{KL}$ und $U_P$. Ist $U_P$ voreilend, so ist es ein \textbf{Generator}, anderseits ein \textbf{Motor}. \\
-                - &
-                Blindleistung: Blindleistung Auf- oder Abgabe. Bei \textbf{Übererregung} oder auch \textbf{kapazitiven Betrieb} gibt der DSM Blindleistung ab. Bei \textbf{Untererregung} oder auch \textbf{induktiven Betrieb} nimmt er auf. \\
-            \end{tabular}
+            Es gibt 2 Unterteilungen: \\
+            \begin{description}
+                \item[Wirkleistung:] Gibt die DSM leistung ab oder nimmt sie auf. Zu erkennen ist das am Phasenwinkel
+                zwischen $U_{KL}$ und $U_P$. Ist $U_P$ voreilend, so ist es ein \textbf{Generator}, anderseits ein
+                \textbf{Motor}.
+                \item[Blindleistung:] Blindleistung Auf- oder Abgabe. Bei \textbf{Übererregung} oder auch \textbf{kapazitiven
+                Betrieb} gibt der DSM Blindleistung ab. Bei \textbf{Untererregung} oder auch \textbf{induktiven Betrieb}
+                nimmt er auf.
+            \end{description}
         \end{minipage}
         \begin{minipage}{8cm}
             \abb{images/Zeigerdiagram.png}{6cm}{Betriebszustände einer DSM}
