--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -78,12 +78,12 @@
 	    	\centering
 	    	\begin{subfigure}[t]{0.45\textwidth}
 	    		\centering
-	    		\includegraphics[width=4.5cm]{images/Leerlaufkennlinie.png}
+	    		\adjustbox{scale=0.8}{\input{tikz/DSM/BetriebsverhaltenLeerlauf}}
 	    		\caption{Im Betriebspunkt linearisierte Leerlaufgerade}
 	    	\end{subfigure}
 	    	\begin{subfigure}[t]{0.45\textwidth}
 	    		\centering
-	    		\includegraphics[width=4.5cm]{images/Kurzschlussgerade.png}
+	    		\adjustbox{scale=0.8}{\input{tikz/DSM/BetriebsverhaltenKurzschluss}}
 	    		\caption{Kurzschlussgerade}
 	        \end{subfigure}
 	        \caption{Kurven in den Verschiedenen Betriebsarten}
